--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,19 @@
 {
-  "presets": ["@babel/preset-env", "minify"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": "> 0.5%, not dead"
+      }
+    ],
+    [
+      "minify",
+      {
+        "builtIns": false,
+        "evaluate": false,
+        "mangle": false
+      }
+    ]
+  ],
   "comments": false
 }
