--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "animare",
-  "version": "1.0.63",
+  "version": "1.0.0-beta.0",
   "description": "Light animation library based on requestanimationframe ",
+  "author": "Ahmed Alabsi <alabsi91@gmail.com",
+  "license": "MIT",
   "main": "lib/animare.js",
   "types": "lib/animare.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alabsi91/animare.git"
+  },
+  "files": [
+    "lib"
+  ],
+  "scripts": {
+    "prepublishOnly": "node scripts/pre-publish.js",
+    "build": "npm run build-ts && npm run build-babel",
+    "build-babel": "babel lib -d lib",
+    "build-ts": "tsc"
   },
   "keywords": [
     "animation",
@@ -19,8 +30,6 @@
     "visual-timing-functions"
   ],
   "browserslist": "> 0.5%, not dead",
-  "author": "Ahmed AlAbsi",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/alabsi91/animare/issues"
   },
@@ -31,11 +40,5 @@
     "babel-minify": "^0.5.1",
     "colors": "^1.4.0",
     "typescript": "^4.6.4"
-  },
-  "scripts": {
-    "publish": "node publish.js",
-    "build": "npm run build-ts && npm run build-babel",
-    "build-babel": "babel lib -d lib",
-    "build-ts": "tsc"
   }
 }
