--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "animare",
-  "version": "1.1.0-beta.3",
-  "description": "Light animation library based on requestanimationframe",
+  "version": "1.1.0-beta.6",
+  "description": "Light animation library for modern JavaScript.",
   "author": "Ahmed Alabsi <alabsi91@gmail.com>",
   "license": "MIT",
   "main": "lib/index.js",
@@ -55,12 +55,11 @@
   },
   "homepage": "https://github.com/alabsi91/animare#readme",
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/cli": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "@types/react": "^18.0.17",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "babel-minify": "^0.5.1",
     "chalk": "^5.0.1",
     "eslint": "^8.21.0",
     "react": "^18.2.0",
