--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2022",
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "target": "ESNext",
     "moduleResolution": "node",
     "declaration": true,
     "outDir": "./lib",
