--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "animare",
-  "version": "1.1.0-beta.8",
+  "version": "1.1.0-beta.10",
   "description": "Light animation library for modern JavaScript.",
   "author": "Ahmed Alabsi <alabsi91@gmail.com>",
   "license": "MIT",
+  "type": "module",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
