--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 node_modules
 lib
-.vscode
+*.tgz
+package-lock.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
