--- a/docs/package.json
+++ b/docs/package.json
@@ -18,14 +18,17 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.2",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
+    "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0",
     "sharp": "^0.33.4",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@astrojs/react": "^3.5.0",
+    "@astrojs/ts-plugin": "^1.8.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "animare": "file:..",
