--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "astro": "^4.10.2",
+    "astro-vtbot": "^1.7.24",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^1.2.2",
