--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "node scripts/build.mjs",
     "test": "tsc --noEmit && eslint src --ext .ts,.tsx",
     "deploy-docs": "git push origin :gh-pages && git subtree push --prefix docs/dist origin gh-pages",
-    "prepack": "npm run build"
+    "prepare": "npm run build"
   },
   "files": [
     "lib",
